# lipsum-chat

./: .gitignore  README.md  pyproject.toml  requirements.txt  vercel.json
app/: api.py  app.py  exception_handlers.py  htmy.py  i18n.py  main.py
lc/: authenticator.py  fastapi.py
lc/chat/: api.py
lc/chat/bot/: __init__.py  beer_corpus.py  bot.py  coffee_corpus.py  utils.py
lc/pages/: __init__.py  chat_page.py  index_page.md  index_page.py  page.py  profile_page.py
lc/ui/: __init__.py  base_page.html  base_page.py  centered.py  chat_bubble.py  chat_container.py  chat_input.py  copy_button.html  copy_button.py  dialog.html  dialog.py  login_dialog.py  md.py  navbar.html  navbar.py  not_found.py  t_function.py  utils.py
lc/user/: auth_api.py  model.py
locale/: en.json
